About page flex layout, TOC default collapsed, table border fixes
- About page: left(70%) content + right(30%) profile image flex layout
- TOC sidebar: default collapsed from HTML, no flash
- Table borders: consistent style for borderless tables
- Social section moved into about-left

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -33,8 +33,43 @@ body.sticky-bottom-footer {
   max-width: v.$max-content-width;
 }
 
+// About page: left content + right image
+.about-layout {
+  display: flex;
+  gap: 2rem;
+  align-items: flex-start;
+}
+
+.about-left {
+  width: 70%;
+  flex-shrink: 0;
+}
+
+.about-right {
+  width: 30%;
+  flex-shrink: 0;
+  position: sticky;
+  top: 70px;
+
+  .profile img {
+    width: 100%;
+  }
+}
+
+@media (max-width: 576px) {
+  .about-layout {
+    flex-direction: column-reverse;
+  }
+  .about-right {
+    width: 60%;
+    margin: 0 auto;
+    position: static;
+  }
+}
+
 // Profile
 .profile {
+  width: 100% !important;
   img {
     width: 100%;
   }
